kubernetes/apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:release-4.0.16.2944
          ports:
            - containerPort: 8989
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /synology
              name: media
        - name: exportarr
          image: ghcr.io/onedr0p/exportarr:v2.0.1
          args:
            - sonarr
            - --port=9707
            - --url=http://localhost:8989
            - --enable-additional-metrics
          ports:
            - containerPort: 9707
              protocol: TCP
              name: metrics
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media
          persistentVolumeClaim:
            claimName: pvc-sonarr-synology
